[build-system]
requires = ["setuptools >= 64.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "common-libs"
description = "Shared libraries used by other unpublished repositories in https://github.com/yugokato"
readme = "README.md"
license = {file="LICENSE"}
authors = [
  { name = "Yugo Kato", email =  "yugokato.o@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries"
]
dependencies = [
    "filelock>=3.16.1"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0,<5",
    "ruff"
]
test = [
    "pytest>=8.0.0,<9",
    "pytest-lazy-fixtures>=1.1.1",
    "pytest-mock>=3.14.0",
    "pytest-smoke",
    "pytest-subtests>=0.11.0",
    "pytest-xdist[psutil]<4",
    "tox>=4.0.0,<5",
    "tox-uv>=1.0.0,<2"
]
client = [
    "psycopg2-binary>=2.9.10",
    "redis>=5.0.7",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
]
container = [
    "container-runtime-interface-api==2.0.0",
    "docker==7.1.0",
]
all = ["common-libs[client,container]"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
]
ignore = ["E731", "E741", "F403"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
