[build-system]
requires = ["setuptools >= 64.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "common-libs"
description = "Shared libraries used by other unpublished repositories in https://github.com/yugokato"
readme = "README.md"
license = {file="LICENSE"}
authors = [
  { name = "Yugo Kato", email =  "yugokato.o@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries"
]
dependencies = [
    "python-dotenv~=1.2.1",
    "filelock>=3.18.0",
    "nest-asyncio2~=1.7.1",  # experimental
    "PyYAML~=6.0.2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0,<2",
    "pre-commit>=4.0.0,<5",
    "ruff>=0.15.0,<0.16.0",
]
test = [
    "pytest~=9.0.0",
    "pytest-lazy-fixtures>=1.2.0,<2",
    "pytest-mock>=3.14.0",
    "pytest-smoke",
    "pytest-xdist[psutil]<4",
    "tox>=4.0.0,<5",
    "tox-uv>=1.0.0,<2"
]
client = [
    "psycopg[binary,pool]>=3.2.9",
    "redis>=6.2.0",
    "httpx>=0.28.0",
    "tabulate>=0.9.0",
]
container = [
    "container-runtime-interface-api==2.0.1",
    "docker==7.1.0",
]
all = ["common-libs[client,container]"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "PIE",  # flake8-pie
    "PLC",  # Pylint convention
    "PLE",  # Pylint error
    "PLW",  # Pylint warning
    "RUF",  # Ruff-specific rules
    "T20",  # flake8-print
    "UP",   # pyupgrade
    "W",    # pycodestyle warning
]
ignore = [
    "E731",     # lambda-assignment
    "E741",     # ambiguous-variable-name
    "F403",     # undefined-local-with-import-star
    "PIE790",   # unnecessary-placeholder
    "PLC0206",  # dict-index-missing-items
    "PLC0415",  # import-outside-top-level
    "PLW2901",  # redefined-loop-name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
files = [
    "src"
]
mypy_path = [
    "src"
]
follow_imports = "skip"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
ignore_missing_imports = true
follow_untyped_imports = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
disable_error_code = ["import-untyped"]
